app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *
 *= require bootstrap-3.3.6.min
 *= require_tree .
 *= require_self
 */
* {
  font-family: Avenir, Trebuchet MS;
}
nav.navbar {
  background-color: #4CAF50;
}

a.navbar-brand {
  font-size: x-large;
}

body{
  background-color: #E9EBEE;

}

.alert-error  {
  color: white;
  background-color: #f44336;
  border-color: #8F0000;
  font-size: 16px;
}

.alert-success {
  color: white;
  background-color: #7CB342;
  border-color: 558B2F;
  font-size: 16px;
}

.alert-notice {
  color: white;
  background-color: #558B2F;
  border-color: #33691E;
  font-size: 16px;
}

